--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:  # Everything under this, installed by conda.
 - numpy
 - pip
 - pre-commit
+- psycopg2
 - pydantic
 - pydantic-settings
 - pytest
